--- a/gb/nf3046.md
+++ b/gb/nf3046.md
@@ -28,6 +28,7 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/9/n13150966.md#1" target="_blank">王友群：北京大学一级教授向达文革被迫害致死</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/9/n13150966.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13150969-a1c6641398d588537f6baecf1c0ae90b-150x120.jpeg" align ="left"></a>一次，章诒和跟他的父亲、毛泽东“钦点”的中国第一大右派章伯钧聊天时，谈到中国历史学界第一大右派向达。章伯钧称赞向达是非常难得的高级人才。章诒和来兴趣了，问：“他怎么个高级法？”章伯钧扳着手指说：“向达精通中外交通史、西域史、唐史、敦煌学，还能编蛮书，搞翻译，对中国美术、壁画也是很有研究。”
 北京大学一级教授
 向达跟中国著名作家沈从文是老乡，湖南湘西人。1.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 9:02 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13207718.md#1" target="_blank">参考资料：纵观天下（2021年9月传单/传真）</a><br></h3>曼哈顿集市 有缘人学炼法轮功 资深护士指证 天安门自焚案造假 三退热线故事 为什么这些密接者不染疫 韩国编剧家：我拥有了全新人生 透过内幕看本质......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 4:45 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201414.md#1" target="_blank">三退声明精选（2021/08/31）</a><br></h3>当我几年前学会翻墙后，幡然醒悟！原来我被共产党骗了这么多年！我曾经受到的教育都是洗脑教育！包括习惯性的思维方式，这都是错的！疫情期间，更是看清了中国共产党和中国政府的丑陋嘴脸！我本人虽然目前没有受到切肤之痛的迫害，但加在别人身上的事情迟早有一天会降临在自己头上！生活在大陆的中国人就是一盘散沙！没有半点同理心！当别人遇到危难的时候，往往会激起他们幸灾乐祸的快感.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 9:05 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13196493.md#1" target="_blank">三退声明精选（2021/08/29）</a><br></h3>五千年历史文化的土壤上，曾经被中共“搅愚”出的毕业生：党史、反八国、爱国云云，殊不解篡改、煽动、爱党的可悲，更不明对文革、六四、法轮真善忍的掩盖。一个需要翻墙才能了解真相的党文化民族，何时能把创新和自信展现给整个世界？大学申请入党，15年预备党员，16年申请参军；是书籍、流亡人士、新闻媒体的正义发声让我不再是井底韭菜和愚民，明白邪恶势力会站起，也会毁灭。本人.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月30日 10:41 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/28/n13193292.md#1" target="_blank">三退声明精选（2021/08/27）</a><br></h3>我父亲是一位老党员干部，他曾说过“共产党尽搞假的”，我曾经开过的小型私企受11个部门管理，其中有10个部门是要钱的，深感共产党的邪恶和经营的无奈。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月28日 9:02 AM							</td></tr>
@@ -48,6 +49,5 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/10/n13151137.md#1" target="_blank">三退声明精选（2021/08/09）</a><br></h3>多年来受邪党文化洗脑，辨不清事情的善恶黑白，是非颠倒不分，白在世上活了几十年！悲哀啊！中共邪党就是害人的恶魔！我们要完全、要自保！坚决退出中共邪党的党、团、队！与其决裂到底！声明即刻生效！！！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 9:21 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/9/n13149760.md#1" target="_blank">传单：传真天地（第二期）</a><br></h3>全家感染变种病毒，炼功后痊愈。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 5:43 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/8/n13147016.md#1" target="_blank">三退声明精选（2021/08/07）</a><br></h3>经过了一年多瘟疫下的生活，我们才看清楚了恶党的真实面目，这个邪恶的党根本就不拿百姓的生命当回事儿，我们决定退出这个邪恶的组织，做一个明白的人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月08日 9:32 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/5/n13141696.md#1" target="_blank">传单：传真天地（第一期）</a><br></h3>疫情蔓延15省已至北京......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 6:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zeqdou3554/djy/blob/master/gb/nf3046.md#1<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nf3046.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zeqdou3554/djy/blob/master/gb/nf3046.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046.htm">https://www.epochtimes.com/gb/nf3046.htm</a>    （国内需<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
